force-app/main/default/objects/Tied_Funding__c/Tied_Funding__c.object-meta.xml
<CustomObject>
    <description>Object for linking Opportunities and the programs (Campaigns they fund).</description>
    <label>Tied Funding</label>
    <nameField>
        <displayFormat>TF-{000}</displayFormat>
        <label>Tied Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tied Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>