force-app/main/default/objects/Tied_Funding__c/fields/Amount_To_Fund__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Fund__c</fullName>
    <label>Amount To Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>