force-app/main/default/objects/Tied_Funding__c/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <formula>Opportunity__r.IsWon</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded</label>
    <type>Checkbox</type>
</CustomField>