force-app/main/default/objects/Tied_Funding__c/fields/Funding_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Funding_Conditions__c</fullName>
    <inlineHelpText>What type of funding is this?  How do we need to acquit this program</inlineHelpText>
    <label>Funding Conditions</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct non-salary (direct program costs only)</fullName>
            </value>
            <value>
                <fullName>Direct salary (program costs and salary)</fullName>
            </value>
            <value>
                <fullName>Indirect Costs/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>