force-app/main/default/objects/Tied_Funding__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <inlineHelpText>Which proposal is this linked to?</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tied Funding</relationshipLabel>
    <relationshipName>Tied_Funding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>