force-app/main/default/objects/Tied_Funding__c/fields/Program_To_Fund__c.field-meta.xml
<CustomField>
    <fullName>Program_To_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program To Fund</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Tied Funding</relationshipLabel>
    <relationshipName>Tied_Funding</relationshipName>
    <type>Lookup</type>
</CustomField>